fixed the overlapping on main element

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,8 @@
 
 
   main > section > h2,
-  main > section > h3 {
+  main > section > h3,
+  main > section > form {
     padding: 0 1rem;
   }
   
@@ -306,6 +307,7 @@
     background-color: var(--button-bg);
     color: var(--button-text);
     border: none;
+    margin: 0 0 0 1rem;
     padding: 0.75rem 1.5rem;
     font-size: 1.1rem;
     border-radius: 1rem;
